fixed remove ingredient button (was overflow)

--- a/src/app/recipes/edit-recipe/edit-recipe.component.css
+++ b/src/app/recipes/edit-recipe/edit-recipe.component.css
@@ -17,3 +17,8 @@
         flex: 1;
     }
 }
+.remove-ingredient {
+    cursor: pointer;
+    text-decoration: underline;
+    color: red;
+}
